Finished footer, adjusted some minor layout issues.

--- a/css/google_main.css
+++ b/css/google_main.css
@@ -4,7 +4,7 @@
 }
 
 main {
-    margin-top: 142px;
+    margin-top: 152px;
 }
 body {
     min-width: 720px;
@@ -32,7 +32,6 @@ footer {
     position: absolute;
     bottom: 0px;
     width: 100%;
-    border-top: 1px solid #E4E4E4;
     background-color: #F2F2F2;
 }
 input:hover, input:focus {
@@ -45,8 +44,8 @@ input:hover, input:focus {
     background-color: #F3F3F3;
     font-size: 0.85em;
     width: auto;
-    margin: 28px 0.3em 18px;
-    padding: 0.75em 1.25em;
+    margin: 29px 0.3em 0px;
+    padding: 0.75em 1.25em 0.6em;
     border: 1px solid transparent;
     border-radius: 4px;
 }
@@ -87,7 +86,11 @@ input:hover, input:focus {
 }
 .flex-header {
     display: flex;
-    align-content: center;
+    width: 222px;
+    margin-left: auto;
+    margin-right: 0px;
+    padding: 0px 8px;
+    justify-content: space-between;
     align-items: center;
     flex-direction: row-reverse;
 }
@@ -95,7 +98,7 @@ input:hover, input:focus {
     font-size: 0.8em;
     flex: 0 0 auto;
     height: auto;
-    padding: 0px 8px;
+    padding: 0px;
 }
 
 /*footer*/
@@ -104,35 +107,49 @@ input:hover, input:focus {
     display: flex;
     flex-flow: row;
     justify-content: space-between;
+    border-top: 1px solid #E4E4E4;
+    align-items: center;
 }
 .f1 {
     font-size: inherit;
     color: inherit;
     flex: 0 0 auto;
+    width: 360px;
+    display: flex;
+    justify-content: space-between;
 }
 .f2 {
     font-size: inherit;
     color: inherit;
     flex: 0 0 auto;
+    display: flex;
+    justify-content: space-between;
+    width: 189px;
 }
 .footer-bar {
     color: #6F6F6F;
     font-size: 0.85em;
-    padding: 15px 20px;
+    padding: 0px 30px;
+    height: 40px;
 }
 .footer-item {
     font-size: inherit;
+    display: inline;
     color: inherit;
-    height: 10px;
-    margin: 0px 10px;
+    margin: 0px;
 }
 
 
 /*IDs*/
 
+#form {
+    padding-top: 23px;
+    margin-bottom: 30px;
+}
 #searchicon {
     position: relative;
     left: 32px;
+    top: 2px;
     z-index: 2;
     scale: 1.2;
     opacity: 0.55;
@@ -142,9 +159,14 @@ input:hover, input:focus {
     width: 484px;
     position: relative;
     text-indent: 46px;
-    margin-top: 27px;
+    padding: 0;
     border: 1px solid #E0E0E0;
     border-radius: 23px;
+}
+#mic-ic {
+    height: 20px;
+    position: relative;
+    right: 10px;
 }
 #content {
     width: 600px;
